Changed the sections from classes to ids so that when the in page links are clicked they jump to the correct section. Also had to update the names that were in CSS

--- a/style.css
+++ b/style.css
@@ -53,10 +53,11 @@ section {
     background-color: snow;
 }
 
-.about-me {
+#about {
     display: flex;
     flex-direction: row;
     max-height: max-content;
+    border-bottom: 5px solid lightsteelblue;
 }
 
 img {
